// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification new for comment type it renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Avatar
        avatarPath={null}
        size="xl"
        styles={
          Object {
            "borderColor": "rgb(45, 82, 113)",
            "borderWidth": 4,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(198, 213, 225, 0.75)",
            "borderRadius": 60,
            "left": -10,
            "paddingHorizontal": 10,
            "paddingVertical": 12,
            "width": 55,
            "zIndex": -1,
          }
        }
      >
        <customIcon
          colour="rgb(255, 255, 255)"
          name="comments"
          size={30}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <Title
        small={true}
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontWeight": "normal",
          }
        }
        text="May respondeu ao seu comentário"
      />
      <Text
        style={
          Object {
            "color": "rgba(51,51,51,0.80)",
          }
        }
      >
        Há 16 dias
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "paddingVertical": 20,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "paddingLeft": 5,
        }
      }
    >
      <customIcon
        name="quote-left"
        size={20}
        style={
          Object {
            "paddingBottom": 5,
          }
        }
      />
      <customIcon
        name="quote-right"
        size={20}
        style={
          Object {
            "paddingBottom": 5,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "rgba(51,51,51,0.80)",
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      Lucas ipsum dolor sit amet organa c-3p0 hutt anakin ponda biggs yoda moff jinn solo. Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Moff solo obi-wan antilles grievous lando mandalore.
    </Text>
  </View>
</View>
`;

exports[`Notification new for post type it renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Avatar
        avatarPath={null}
        size="xl"
        styles={
          Object {
            "borderColor": "rgb(45, 82, 113)",
            "borderWidth": 4,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(198, 213, 225, 0.75)",
            "borderRadius": 60,
            "left": -10,
            "paddingHorizontal": 10,
            "paddingVertical": 12,
            "width": 55,
            "zIndex": -1,
          }
        }
      >
        <customIcon
          colour="rgb(255, 255, 255)"
          name="image"
          size={30}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <Title
        small={true}
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontWeight": "normal",
          }
        }
        text="E2M publicou um novo post"
      />
      <Text
        style={
          Object {
            "color": "rgba(51,51,51,0.80)",
          }
        }
      >
        Há 16 dias
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "paddingVertical": 20,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FlexImage
        source={
          Object {
            "testUri": "../../../app/assets/images/image_post_1.jpg",
          }
        }
        style={
          Object {
            "borderRadius": 5,
            "overflow": "hidden",
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "rgba(51,51,51,0.80)",
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      Mara fisto yoda ben jade. Mace ben wedge jinn leia luke. Lando mandalore.
    </Text>
  </View>
</View>
`;

exports[`Notification old for comment type it renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Avatar
        avatarPath={null}
        size="medium"
        styles={Object {}}
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <Title
        small={true}
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontWeight": "normal",
          }
        }
        text="May respondeu ao seu comentário"
      />
      <Text
        style={
          Object {
            "color": "rgba(51,51,51,0.80)",
          }
        }
      >
        Há 16 dias
      </Text>
    </View>
  </View>
</View>
`;

exports[`Notification old for post type it renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "marginBottom": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Avatar
        avatarPath={null}
        size="medium"
        styles={Object {}}
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <Title
        small={true}
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontWeight": "normal",
          }
        }
        text="E2M publicou um novo post"
      />
      <Text
        style={
          Object {
            "color": "rgba(51,51,51,0.80)",
          }
        }
      >
        Há 16 dias
      </Text>
    </View>
  </View>
</View>
`;
